--- a/src/pages/team-detail/team-detail.html
+++ b/src/pages/team-detail/team-detail.html
@@ -1,29 +1,42 @@
 <ion-header>
 
   <ion-navbar>
-    
+
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content>
+
+  <ion-refresher (ionRefresh)="refreshAll($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+
   <ion-card>
     <ion-card-content>
       <ion-row>
-        <ion-col>
+        <ion-col col-6>
           <h2>Record: {{teamStanding.wins}}-{{teamStanding.losses}}</h2>
           <p>Coach: {{team.coach}}</p>
         </ion-col>
-        <ion-col>
+        <ion-col col-6 text-right>
+          <button ion-button icon-left outline (click)="toggleFollow()" *ngIf="!isFollowing">
+            <ion-icon name="star"></ion-icon>
+            Add Favorite
+          </button>
+          <button ion-button icon-only (click)="toggleFollow()" *ngIf="isFollowing">
+            <ion-icon name="star"></ion-icon>
 
+          </button>
         </ion-col>
       </ion-row>
       <ion-item>
         <ion-label>Date Filter:</ion-label>
-        <ion-datetime displayFormat="M/D/YYYY" pickerFormat="M/D/YYYY" 
+        <ion-toggle [(ngModel)]="useDateFilter" (ionChange)="dateChanged()" ></ion-toggle>
+        <ion-datetime displayFormat="M/D/YYYY" pickerFormat="M/D/YYYY"
         [(ngModel)]="dateFilter"
-        (ionChange)="dateChanged()"></ion-datetime>
+        (ionChange)="dateChanged()" [(disabled)]="!useDateFilter"></ion-datetime>
       </ion-item>
     </ion-card-content>
   </ion-card>
@@ -31,7 +44,7 @@
   <ion-list>
     <ion-item *ngFor="let game of games" (click)="gameClicked($event, game)">
       <ion-row>
-        <ion-col col-3> 
+        <ion-col col-3>
             <p>{{game.time | date:'M/d/yy'}}</p>
             <p>{{game.time | date:'shortTime'}}</p>
           </ion-col>
@@ -41,6 +54,7 @@
         </ion-col>
         <ion-col col-3>
           <h4>{{game.scoreDisplay}}</h4>
+          <ion-badge [color]="getScoreDisplayBadgeClass(game)">{{getScoreWorL(game)}}</ion-badge>
         </ion-col>
       </ion-row>
     </ion-item>
